// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoaKM dPfGhb"
>
  <li
    className="sc-fzomuh gpfLzz"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYkl bmPWXB"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzomuh gpfLzz"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYkl bmPWXB"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzomuh gpfLzz"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYkl bmPWXB"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoaKM dPfGhb"
>
  <li
    className="sc-fzomuh iczoej"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYkl bmPWXB"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzomuh iczoej"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYkl bmPWXB"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzomuh iczoej"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYkl bmPWXB"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
